[package]
name = "siwe"
version = "0.1.2"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementation of EIP-4361: Sign In With Ethereum"
repository = "https://github.com/spruceid/siwe-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iri-string = { version = "0.4", features = ["serde", "serde-std"] }
chrono = "0.4"
hex = { version = "0.4", features = ["serde"] }
k256 = { version = "0.9", default-features = false, features = ["std", "ecdsa", "keccak256"] }
sha3 = "0.9"
thiserror = "1.0"
ethers-core = "0.6.2"
http = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
serde_json = "1.0.73"
assert-json-diff = "2.0.1"
